--- a/playbook_proxmox.yml
+++ b/playbook_proxmox.yml
@@ -5,24 +5,42 @@
   vars_files:
     - vars.yml
     - vault.yml
-
+  vars:
+    vm_planned: "{{ query('netbox.netbox.nb_lookup', 'virtual-machines',
+                      api_endpoint='http://localhost:8888/',
+                      api_filter='status=planned',
+                      token='0123456789abcdef0123456789abcdef01234567') }}"
   tasks:
+    - name: Obtain list of devices from NetBox
+      debug:
+        msg: "{{ vm_planned }}"
+      tags:
+       - debug
+
+                  
     - name: Create LXC Container
       community.general.proxmox:
-        vmid: "{{ item.id }}"
-        hostname: "{{ item.hostname }}"
-        node: "{{ item.node }}"
-        password: "{{ item.password }}"
-        memory: "{{ item.memory }}"
-        storage: "{{ item.storage }}"
-        netif: "{{ item.netif }}"
+        hostname: "{{ item.value.name }}"
+        node: "{{ item.value.cluster.name }}"
+        password: "{{ defaultpassword }}"
+        memory: "{{ item.memory | default('1024') }}"
+        storage: local-lvm
+        netif: '{"net0":"name=eth0,ip=dhcp,bridge=vmbr0"}'
         api_host: "{{ proxmox_host }}"
         api_user: "{{ proxmox_user }}"
         api_token_id: "{{ proxmox_token_id }}"
         api_token_secret: "{{ proxmox_token_secret }}"
-        ostemplate: "{{ item.ostemplate }}"
+        ostemplate: "{{ item.value.custom_fields.OSTemplate }}"
         validate_certs: false
-      loop: "{{ vm }}"
+      loop: "{{ vm_planned }}"
+      register: output
+      tags: debug
+
+    - name: Obtain list of devices from NetBox
+      debug:
+        msg: "{{ output }}"
+      tags:
+       - debug
 
     - name: Pause for 10 seconds to build app cache
       ansible.builtin.pause:
@@ -30,11 +48,23 @@
 
     - name: Start LXC Container
       community.general.proxmox:
-        vmid: "{{ item.id }}"
+        vmid: "{{ item.vmid }}"
         state: started
         api_host: "{{ proxmox_host }}"
         api_user: "{{ proxmox_user }}"
         api_token_id: "{{ proxmox_token_id }}"
         api_token_secret: "{{ proxmox_token_secret }}"
         validate_certs: false
-      loop: "{{ vm }}"
+      loop: "{{ output.results }}"
+      when: item.failed == false
+
+    - name: Tag as active in Netbox
+      netbox.netbox.netbox_virtual_machine:
+        netbox_url: "{{ netbox_url }}"
+        netbox_token: "{{ netbox_token }}"
+        data:
+          name: "{{ item.item.value.name }}"
+          status: active
+      loop: "{{ output.results }}"
+      when: item.failed == false
+      tags: debug
