--- a/playbook_proxmox.yml
+++ b/playbook_proxmox.yml
@@ -60,7 +60,7 @@
 
     - name: Tag as active in Netbox
       netbox.netbox.netbox_virtual_machine:
-        netbox_url: "{{ netbox_url }}"
+        netbox_url: "{{ netbox_api }}"
         netbox_token: "{{ netbox_token }}"
         data:
           name: "{{ item.item.value.name }}"
