Edit to work in my lab

--- a/inventory.yml
+++ b/inventory.yml
@@ -1,6 +1,6 @@
 ---
 plugin: netbox.netbox.nb_inventory
-api_endpoint: http://localhost:8888
+api_endpoint: http://172.16.0.241:8080/
 token: 0123456789abcdef0123456789abcdef01234567
 validate_certs: False
 config_context: False
