--- a/playbook_proxmox.yml
+++ b/playbook_proxmox.yml
@@ -7,7 +7,7 @@
     - vault.yml
   vars:
     vm_planned: "{{ query('netbox.netbox.nb_lookup', 'virtual-machines',
-                      api_endpoint=vars['netbox_api'],
+                      api_endpoint=vars['netbox_url'],
                       api_filter='status=planned',
                       token=vars['netbox_token']) }}"
   tasks:
@@ -24,8 +24,8 @@
         node: "{{ item.value.cluster.name }}"
         password: "{{ defaultpassword }}"
         memory: "{{ item.memory | default('1024') }}"
-        storage: local-lvm
-        netif: '{"net0":"name=eth0,ip=dhcp,bridge=vmbr0"}'
+        storage: data-vm
+        netif: '{"net0":"name=eth0,ip=dhcp,bridge=vmbr2,tag=1"}'
         api_host: "{{ proxmox_host }}"
         api_user: "{{ proxmox_user }}"
         api_token_id: "{{ proxmox_token_id }}"
@@ -61,7 +61,7 @@
 
     - name: Tag as active in Netbox
       netbox.netbox.netbox_virtual_machine:
-        netbox_url: "{{ netbox_api }}"
+        netbox_url: "{{ netbox_url }}"
         netbox_token: "{{ netbox_token }}"
         data:
           name: "{{ item.item.value.name }}"
